--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "ddos-panel",
-  "version": "1.0.0",
-  "description": "Educational DDoS Tool - Simulasi dan Bypass Cloudflare",
-  "main": "ddos.js",
+  "name": "ddos-tools",
+  "version": "2.0.0",
+  "description": "Xiao Wu DDOS Tools",
+  "main": "menu.js",
   "scripts": {
-    "start": "node ddos.js"
-    "type": "module"
+    "start": "node menu.js"
   },
-  "author": "Ganz",
-  "license": "MIT",
   "dependencies": {
-    "cloudscraper": "^4.6.0",
-    "ora": "^6.1.2",
-    "randomstring": "^1.3.0",
+    "chalk": "^5.3.0",
+    "cloudscraper": "^4.7.1",
+    "randomstring": "^1.2.2",
     "request": "^2.88.2"
-    "type": "module"
   }
 }
