--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "node menu.js"
   },
   "dependencies": {
-    "chalk": "^5.3.0",
-    "cloudscraper": "^4.7.1",
-    "randomstring": "^1.2.2",
-    "request": "^2.88.2"
+  "chalk": "^5.3.0",
+  "readline": "^1.3.0",
+  "request": "^2.88.2",
+  "randomstring": "^1.2.2"
+  }
   }
 }
