--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "ddos-tools",
-  "version": "2.0.0",
-  "description": "Xiao Wu DDOS Tools",
+  "name": "xiaowu-ddos",
+  "version": "1.0.0",
+  "description": "🔥 XiaoWu-DDOS | Premium DDoS Toolkit 汉字版",
   "main": "menu.js",
   "scripts": {
     "start": "node menu.js"
   },
   "dependencies": {
-  "chalk": "^5.3.0",
-  "readline": "^1.3.0",
-  "request": "^2.88.2",
-  "randomstring": "^1.2.2"
-  }
-  }
+    "chalk": "^5.3.0",
+    "readline": "^1.3.0",
+    "request": "^2.88.2",
+    "randomstring": "^1.2.2"
+  },
+  "author": "Ganz (小吴)",
+  "license": "MIT"
 }
